# Deutscher-Blog-WebCrawler

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
api_functions/: api_get_blogs.py  api_handler.py  iteration.py
data/csv/initial/: tags.csv
data/csv/iterations/: iteration_0.csv
data/json/initial/: blog_posts.json
data/json/iterations/iteration_0/: advertising_store.json  advice_store.json  africa_store.json  agriculture_store.json  america_store.json  anime_store.json  architecture_store.json  asia_store.json  author_store.json
database/: SQ_db.py
deutscher_blog_webcrawler/: main.py  results.ipynb
main/: main.py  results.py
models/: base.py  language.py  sql_models.py
server_data/: docker-compose.yaml
utility/: constant_variables.py  database_connector.py  file_state_manager.py
web_crawler/: get_blogs.py  get_tags.py  validate_blogs.py  validate_tags.py  web_crawler.py
