[project]
name = "deutscher-blog-webcrawler"
version = "0.1.0"
description = ""
authors = [
    {name = "LaurensWink",email = "laurensherzebrock@googlemail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "alive-progress (>=3.2.0,<4.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "httpcore (>=1.0.7,<2.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
